--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-    <string name="app_name">Timer_App_CP3406_Jacob_Madeley</string>
+
+    <string name="app_name">Timer App</string>
+    <string name="settings">Settings</string>
+    <string name="pause">Pause</string>
+    <string name="reset">Reset</string>
+    <string name="start">Start</string>
+    <string name="timer">Timer</string>
+    <string name="default_timer">10:00</string>
+    <string name="default_intervals">4</string>
+    <string name="apply_settings">Apply Settings</string>
+    <string name="intervals_remaining">Intervals Remaining: %1$d</string>
+
 </resources>
